5.monitoring-NS/5.grafana-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  namespace: monitoring
  labels:
    app: grafana
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      #nodePort: 30030  # Optional: choose a port in the range 30000-32767 or omit to auto-assign
      #protocol: TCP
