5.monitoring-NS/6.prometheus-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
  namespace: monitoring
  labels:
    app: kube-prometheus-stack-prometheus
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /-/healthy
  
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: prometheus-kube-prometheus-prometheus

  ports:
    - name: http-web
      port: 9090
      targetPort: 9090
      #nodePort: 30090
      #protocol: TCP
    #- name: reloader-web
    #  port: 8080
    #  targetPort: 8080
      #nodePort: 30091
      #protocol: TCP
