5.monitoring-NS/8.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  labels:
    app: monitoring-ingress
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: monitoringingressrules
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port   
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2' 
spec:
  ingressClassName: my-aws-ingress-class-monitoring # Ingress Class
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-nodeport #grafana-nodeport
              port:
                number: 9090 #3000
        - path: /grafana
          pathType: Prefix
          backend:
            service:
              name: grafana-nodeport #prometheus-nodeport
              port:
                number: 3000 #9090
